--- a/quest-4/Anchor.toml
+++ b/quest-4/Anchor.toml
@@ -1,16 +1,19 @@
-[features]
+ [features]
 seeds = true
 skip-lint = false
 
 [programs.localnet]
-swap_program = "FVCG6YkMbACgskY3ZrwqWFr45ERgJuKrf7C9dRDh6LjX"
+swap_program = "FrqpdBzBGj3dEjQWAYro4skekLs79AyXiVkoj7xPAPvN"
+
+[programs.devnet]
+swap_program = "FrqpdBzBGj3dEjQWAYro4skekLs79AyXiVkoj7xPAPvN"
 
 [registry]
 url = "https://api.apr.dev"
 
 [provider]
-cluster = "localnet"
-wallet = "/Users/joesol/.config/solana/id.json"
+cluster = "devnet"
+wallet = "/root/.config/solana/id.json"
 
 [scripts]
 upload-json = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/upload-json.test.ts"
