--- a/quest-3/l3/package.json
+++ b/quest-3/l3/package.json
@@ -6,7 +6,8 @@
     "dependencies": {
         "@coral-xyz/anchor": "^0.28.0",
         "@solana/spl-token": "^0.4.6",
-        "@solana/web3.js": "^1.91.7"
+        "@solana/web3.js": "^1.91.7",
+        "dotenv": "^16.4.5"
     },
     "devDependencies": {
         "@types/bn.js": "^5.1.0",
